[package]
name = "tasklist"
version = "0.1.2"
edition = "2021"
description = "Get the process name or process id on windows"
license = "MIT"
repository = "https://github.com/yalishandar/tasklist-rs"
documentation = "https://docs.rs/crate/tasklist/latest"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version = "0.38.0",features = ["Win32_System_Threading","Win32_Foundation","Win32_Security","Win32_System_Diagnostics_ToolHelp"]}