[package]
name = "tasklist"
version = "0.1.6"
edition = "2021"
description = "Get the process name or process id on windows"
license = "MIT"
repository = "https://github.com/yalishandar/tasklist-rs"
documentation = "https://docs.rs/tasklist/latest/tasklist/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"


[target.'cfg(windows)'.dependencies]
windows = {version = "0.38.0",features = ["Win32_System_Threading","Win32_Foundation","Win32_Security","Win32_System_Diagnostics_ToolHelp"]}


