[package]
name = "tasklist"
version = "0.2.1"
edition = "2021"
description = "Get the tasklist and process information on windows"
license = "MIT"
repository = "https://github.com/yalishandar/tasklist-rs"
documentation = "https://docs.rs/tasklist/latest/tasklist/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"


[target.'cfg(windows)'.dependencies]
windows = {version = "0.38.0",features = ["Win32_Storage_FileSystem","Win32_Globalization","Win32_UI_Shell","Win32_System_Diagnostics_Debug","Win32_System_Kernel","Win32_System_Time","Win32_System_ProcessStatus","Win32_Security_Authorization","Win32_NetworkManagement_NetManagement","Win32_System_RemoteDesktop","Win32_System_Threading","Win32_Foundation","Win32_Security","Win32_System_Diagnostics_ToolHelp"]}